# SupportAI

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  benchmark.py  docker-compose.yml  mlflow.db  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  review_phase_1.md
.github/workflows/: ci.yml
benchmarks/: .gitkeep  benchmark_runner.py
configs/: config.yaml  default.yaml  inference.yaml  prometheus.yml  train.yaml
data/: .gitkeep
data/customer_support_tickets_v1/: test.parquet  train.parquet  val.parquet
data/transformer_cache/: train_tokenized.pt
docs/: .gitkeep  FINAL_AUDIT.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_VERIFICATION_REPORT.md  INTERVIEW_GUIDE.md  PROJECT_AUDIT_REPORT.md  baselines.md  benchmark_results.md  project_conventions.md
experiments/: .gitkeep
logs/: traces.jsonl
notebooks/: 00_Environment_Check.ipynb  01_Project_Tour.ipynb  02_EDA_Banking77.ipynb  03_Baseline_Models.ipynb  04_Error_Analysis.ipynb  05_Distil_Data.ipynb  06_Training.ipynb  07_Model_Evaluation.ipynb  08_Calibration.ipynb  09_Optimization.ipynb  10_Explainability.ipynb  11_Retrieval.ipynb  12_LLM_Fallback.ipynb  13_API_Demo.ipynb  14_Deployment.ipynb  15_End_to_End_Demo.ipynb  mlflow.db
outputs/checkpoints/: .gitkeep  transformer_checkpoint.pt
outputs/eda/: summary.json
outputs/eda/tables/: intent_frequencies.csv  rare_intents.csv
outputs/figures/: .gitkeep
outputs/manifests/: phase_00_environment_check.yaml  phase_02_eda.yaml  phase_03_baselines.yaml  phase_04_error_analysis.yaml  phase_05_distil_data.yaml  phase_06_training.yaml  phase_07_model_evaluation.yaml  phase_08_calibration.yaml  phase_09_optimization.yaml  phase_10_explainability.yaml  phase_11_retrieval.yaml  phase_12_llm_fallback.yaml
outputs/metrics/: .gitkeep  calibration_metrics.json  calibration_summary.json  class_metrics.csv  classification_report.txt  error_summary.json  eval_metrics.json  evaluation_summary.json  metrics.json  misclassified.csv  mock_predictions.csv  mock_tour_metrics.json  optimization_benchmarks.json  per_class_metrics.csv  prediction_examples.csv  predictions.csv  training_history.csv  training_history.json  worst_classes.csv
outputs/metrics/plots/: lime_explanation.html
outputs/models/: .gitkeep  label_encoder.json  linear_svm_pipeline.joblib  logistic_regression_pipeline.joblib  model-inferred.onnx  model.onnx  model.onnx.data  model_inferred.onnx  model_quant.onnx  naive_bayes_pipeline.joblib  pytorch_quant.pt
outputs/models/best_model/: config.json  model.safetensors
outputs/retrieval_index/: index.faiss  metadata.json
outputs/transformer_cache/: test.pt  train.pt  val.pt
scratch/: add_yaml_cells.py  debug_llm.py  validate_notebooks.py  verify_decision_engine.py  verify_endpoints.py
scratch/outputs/: decision_engine_results.json  llm_investigation.json
src/: __init__.py  cli.py
src/api/: __init__.py  app.py
src/api/templates/: demo.html
src/data/: __init__.py  cache.py  dataloader.py  dataset.py  eda.py  preprocessing.py  schema.py  validation.py
src/evaluation/: __init__.py  calibration.py  error_analysis.py  evaluation_runner.py  explainability.py  metrics.py
src/models/: __init__.py
src/models/baselines/: __init__.py  cli.py  pipeline.py
src/models/transformer/: __init__.py  collator.py  dataset.py  decision_engine.py  optimization.py  retrieval.py  train.py
src/utils/: __init__.py  artifacts.py  config.py  constants.py  logging_utils.py  seed.py  timer.py  version.py
supportai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_api.py  test_artifacts.py  test_baselines.py  test_calibration.py  test_config.py  test_constants.py  test_data_pipeline.py  test_decision_engine.py  test_error_analysis.py  test_explainability.py  test_logging_utils.py  test_metrics.py  test_model_evaluation.py  test_optimization.py  test_retrieval.py  test_seed.py  test_smoke.py  test_timer.py  test_transformer_data.py  test_transformer_train.py
