[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportai"
version = "0.1.0"
description = "Lightweight customer-support ticket routing system with calibrated ML inference."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "SupportAI Team" }]

dependencies = [
    # Deep learning
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "tokenizers>=0.19.0",
    "accelerate>=0.30.0",
    # Scikit-learn ecosystem
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.12.0",
    # Data manipulation
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    # Experiment tracking
    "mlflow>=2.12.0",
    # Data versioning
    "dvc>=3.50.0",
    # Visualisation
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Utilities
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "ipykernel>=6.29.0",
    "notebook>=7.2.0",
]

[project.scripts]
supportai = "src.cli:main"
train_baselines = "src.models.baselines.cli:train_main"
evaluate_baselines = "src.models.baselines.cli:evaluate_main"
analyze_errors = "src.evaluation.error_analysis:main"
train_transformer = "src.models.transformer.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
]
ignore = [
    "S101",  # use of assert (allowed in tests)
    "S311",  # random module (ML seeding is intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"notebooks/*" = ["E501"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "smoke: marks tests as smoke tests",
    "integration: marks tests as integration tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
